[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
sha2 = "0.10.6"
md5 = "0.7.0"
